# yast-installation-control

./: .gitignore  .travis.yml  MAINTAINER  README.md  Rakefile
control/: Makefile.am  README.md  control.SLED.xml  control.SLES.xml  control.openSUSE.xml  control.rnc  control.rng  partitioning_elements.rnc  partitioning_elements.rng
package/: yast2-installation-control.changes  yast2-installation-control.spec
rpm/: Makefile.am  macros.skelcd
test/: Makefile.am  control.test.xml
